--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>tornadofx</artifactId>
             <version>1.7.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>11.0.2</version>
+            <classifier>win</classifier>
+        </dependency>
     </dependencies>
 
     <build>
